--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   
   <body>
     <h1>Palindrome Tipper!</h1>
-    <p>This page takes a cost as input and calculates any palendromic tip and total amounts <i>(up to 50% of the cost)</i>.</p>
+    <p>This page takes a cost as input and calculates any palendromic tip and total amounts
+    <br/><i>(up to 50% of the cost)</i>.</p>
     <p>Cost: <input type="text" id="cost" size="8"/></p>
     <div id="tbl"/>
   </body>
