--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <script src="palindromeTipper.js"></script>
     <link rel="stylesheet" href="index.css">
     <title>Palindrome Tipper</title>
+    <meta name="viewport" content="width=500, initial-scale=1">
   </head>
   
   <body>
     <h1>Palindrome Tipper!</h1>
-    <p>This page takes a cost as input and calculates any palendromic tip and total amounts
-    <br/><i>(up to 50% of the cost)</i>.</p>
+    <p>This page takes a cost as input and calculates any palendromic tip and total amounts.
+    <br/><i>(Up to 50% of the cost.)</i></p>
     <p>Cost: <input type="text" id="cost" size="8"/></p>
     <div id="tbl"/>
   </body>
