--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>Palindrome Tipper!</h1>
     <p>This page takes a cost as input and calculates any palendromic tip and total amounts.
     <br/><i>(Up to 50% of the cost.)</i></p>
-    <p>Cost: <input type="text" id="cost" size="8"/></p>
+    <p id="inputbox">Cost: <input type="text" id="cost" size="8"/></p>
     <div id="tbl"/>
   </body>
 </html>
