--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="palindromeTipper.js"></script>
     <link rel="stylesheet" href="index.css">
     <title>Palindrome Tipper</title>
+    <meta name="viewport" content="width=500, initial-scale=1">
   </head>
   
   <body>
