--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
   </head>
   
   <body>
-    <h1>Palindrome Tipper!</h1>
+    <h1><img src="./favicon.ico" style="margin-right: 15px"/>Palindrome Tipper!</h1>
     <p>This page takes a cost as input and calculates any palendromic tip and total amounts.
     <br/><i>(Up to 50% of the cost.)</i></p>
     <p id="inputbox">Cost: <input type="text" id="cost" size="8"/></p>
-    <div id="tbl"/>
+    <div id="tbl"></div>
+    <hr/>
+    <p class='footer'>A <a href="https://datafoundries.com">Data Foundries</a> site.</p>
+    <p class='footer'>Tame your tabs and manage your online life with <a href="https://braintool.org">BrainTool</a></p>
   </body>
 </html>
